[package]
name = "pinocchio_bpf_starter"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { default-features = false, version = "^0.10.1" }
solana-define-syscall = { version = "^4.0.1", features = ["unstable-static-syscalls"] }
solana-program-log = { default-features = false, version = "^1.1.0" }

[dev-dependencies]
mollusk-svm = { default-features = false, version = "^0.10.0" }
solana-instruction = { default-features = false, version = "^3.1.0" }

[lints]
workspace = true
