[package]
name = "anchor-realloc-client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { workspace = true, default-features = true }
num-derive = { workspace = true, default-features = true }
num-traits = { workspace = true, default-features = true }
pina_pod_primitives = { workspace = true }
solana-account-info = { workspace = true, default-features = true }
solana-cpi = { workspace = true, default-features = true }
solana-instruction = { workspace = true, default-features = true }
solana-program-error = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
