[package]
name = "anchor-system-accounts-client"
version = "0.0.0"
edition = "2021"
publish = false

	[dependencies]
	bytemuck = { workspace = true }
	num-derive = { workspace = true }
	num-traits = { workspace = true }
	pina_pod_primitives = { workspace = true }
	solana-account-info = { workspace = true }
	solana-cpi = { workspace = true }
	solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
thiserror = { workspace = true }
