[package]
name = "counter-program-client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
